--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.12.5",
     "eslint": "^8.18.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-react": "^9.2.0",
@@ -36,11 +40,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "eslint-plugin-standard": "^4.0.1",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/runtime": "^7.12.5"
+    "eslint-plugin-standard": "^4.0.1"
   },
   "private": true
 }
